--- a/index.html
+++ b/index.html
@@ -4,20 +4,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Samuel Degen | Academic Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Computer+Modern+Serif&display=swap" rel="stylesheet">
   <style>
+    html {
+      scroll-behavior: smooth;
+    }
+    :root {
+      --bg-color: #3a3a3a;
+      --text-color: #eaeaea;
+      --section-bg: rgba(0,0,0,0.3);
+      --accent-gradient: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+    }
+    body.light-mode {
+      --bg-color: white;
+      --text-color: #333;
+      --section-bg: rgba(255,255,255,0.8);
+    }
     body {
-      font-family: 'Roboto', sans-serif;
+      font-family: 'Computer Modern Serif', serif;
       margin: 0;
-      background-color: #f8f9fa;
-      color: #333;
+      background: var(--bg-color);
+      color: var(--text-color);
       line-height: 1.6;
+      transition: background 0.3s, color 0.3s;
     }
     header {
-      background: #003366;
-      color: white;
+      background: var(--accent-gradient);
       padding: 2rem 1rem;
       text-align: center;
+      border-bottom-left-radius: 20px;
+      border-bottom-right-radius: 20px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.5);
+      color: #333;
     }
     header h1 {
       margin: 0;
@@ -30,30 +48,67 @@
       margin-top: 1rem;
     }
     nav a {
-      color: #ffcc00;
+      color: #333;
       margin: 0 10px;
       text-decoration: none;
       font-weight: bold;
+      background: var(--section-bg);
+      padding: 0.4rem 0.8rem;
+      border-radius: 8px;
+      transition: background 0.3s;
+    }
+    nav a:hover {
+      background: rgba(255,255,255,0.2);
+    }
+    #modeToggle {
+      font-family: 'Computer Modern Serif', serif;
+      background: var(--bg-color);
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 20px;
+      color: var(--text-color);
+      cursor: pointer;
+      margin-top: 1rem;
     }
     section {
       max-width: 900px;
       margin: auto;
       padding: 2rem 1rem;
+      background: var(--section-bg);
+      margin-top: 2rem;
+      border-radius: 15px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+      transition: background 0.3s;
     }
     h2 {
-      border-bottom: 2px solid #003366;
+      border-bottom: 3px solid transparent;
+      border-image: var(--accent-gradient) 1;
       padding-bottom: 0.5rem;
-      margin-top: 2rem;
+      margin-top: 0;
     }
     ul {
       padding-left: 1.2rem;
+    }
+    ul li strong {
+      font-weight: bold;
+    }
+    details {
+      margin-bottom: 1rem;
+    }
+    summary {
+      cursor: pointer;
+      font-weight: bold;
+      color: var(--text-color);
     }
     .footer {
       text-align: center;
       padding: 1rem;
       font-size: 0.9rem;
-      background: #003366;
-      color: white;
+      background: var(--accent-gradient);
+      color: #333;
+      margin-top: 2rem;
+      border-top-left-radius: 20px;
+      border-top-right-radius: 20px;
     }
     @media (max-width: 600px) {
       header h1 {
@@ -66,16 +121,17 @@
 
 <header>
   <h1>Samuel Degen</h1>
-  <p>PAB 2-429, Department of Physics, UCLA, Los Angeles, CA 90024, USA</p>
-  <p>Email: <a href="mailto:degen@ucla.edu" style="color:#ffcc00;">degen@ucla.edu</a></p>
+  <p><strong>PAB 2-429</strong>, <strong>Department of Physics</strong>, UCLA, Los Angeles, CA 90024, USA</p>
+  <p>Email: <a href="mailto:degen@ucla.edu" style="color:#333;">degen@ucla.edu</a></p>
   <nav>
     <a href="#education">Education</a>
     <a href="#honors">Honors & Awards</a>
     <a href="#research">Research</a>
     <a href="#talks">Talks</a>
+    <a href="#meetings">Meetings</a>
     <a href="#service">Service</a>
-    <a href="Samuel_Degen_CV.pdf" target="_blank">Download CV</a>
   </nav>
+  <button id="modeToggle">Dark Mode</button>
 </header>
 
 <section id="education">
@@ -89,48 +145,83 @@
 <section id="honors">
   <h2>Honors & Awards</h2>
   <ul>
-    <li>Mani L. Bhaumik Institute for Theoretical Physics Summer Research Fellowship (First undergraduate recipient)</li>
-    <li>University of Tokyo Research Internship Program (UTRIP) — 1 of 14 selected from 1,149 applicants; FUTI Global Leadership Award recipient</li>
-    <li>Perimeter Institute’s PSI START Satellite Program — 1 of 3 international students selected</li>
-    <li>UCLA Summer Undergraduate Research Fellowship</li>
+    <li><strong>Mani L. Bhaumik Institute for Theoretical Physics Summer Research Fellowship</strong> — First undergraduate offered a summer research fellowship at UCLA’s Bhaumik Institute for Theoretical Physics (Aug / 2025)</li>
+    <li><strong>University of Tokyo Research Internship Program (UTRIP)</strong> — 1 of 14 selected from 1,149 applicants for in-person, fully funded program; <strong>FUTI Global Leadership Award</strong> recipient (Jun / 2025)</li>
+    <li><strong>Perimeter Institute’s PSI START Satellite Program</strong> — 1 of 3 international students selected for in-person, fully funded 2-week program in Quebec (May / 2025)</li>
+    <li><strong>UCLA Summer Undergraduate Research Fellowship</strong> — 1 of 2 first-year undergraduates selected for competitive paid 10-week fellowship (Summer / 2024)</li>
   </ul>
 </section>
 
 <section id="research">
   <h2>Research Experience</h2>
-  <ul>
-    <li><strong>University of Tokyo — Nuclear Theory Group</strong> (2025–Present)<br>
-    Using EFT and RG methods to build ab initio nuclear DFT for microscopic understanding of quantum many-body nuclear processes.</li>
-    <li><strong>UCLA — Scattering Amplitudes Group</strong> (2025–Present)<br>
-    Research in scattering amplitudes with Z. Bern & M. Solon.</li>
-    <li><strong>UCLA — Plasma Theory Group</strong> (2024–2025)<br>
-    Developed ML-based methods for modeling particle acceleration in astrophysical jets.</li>
-    <li><strong>UCLA — Condensed Matter Group</strong> (2024)<br>
-    Pedagogical contributions to Feynman Checkerboard formalism.</li>
-  </ul>
+  <details>
+    <summary><strong>University of Tokyo — H. Liang Nuclear Theory Group</strong> (2025–Present)</summary>
+    <p>How humans can make a safe and efficient use of nuclei – such as through fission and fusion processes – is a difficult question, requiring a deep microscopic understanding of quantum many-body theories. The treatment of long-lived fission products by nuclear power plants depends strongly on the specifics of quantum many-body tunneling, a long-standing problem that requires a first principles (ab initio) theory of properties of nuclei. While there are many established microscopic nuclear theories, the only approach applicable to almost the whole nuclear chart is Density Functional Theory (DFT). Our work uses modern theoretical tools such as Effective Field Theory (EFT) and Renormalization Group (RG) Flow to construct such an ab initio nuclear DFT.</p>
+  </details>
+  <details>
+    <summary><strong>UCLA — Z. Bern & M. Solon Scattering Amplitudes Group</strong> (2025–Present)</summary>
+    <p>Research in scattering amplitudes with Z. Bern & M. Solon. Project TBD.</p>
+  </details>
+  <details>
+    <summary><strong>UCLA — E. Paulo Alves Plasma Theory Group</strong> (2024–2025)</summary>
+    <p>Developed novel ML-based methods for studying time-dependent particle acceleration in relativistic astrophysical jets. My work resolves longstanding limitations of standard models by combining analytic theory and machine learning to uniquely solve ill-posed problems for the first time. Demonstrated that simple energy-dependent models are insufficient to explain the observed nonthermal particle spectrum and that these novel ML methods can be generalized to solve a large class of ill-posed problems—uniquely identifying physical solutions from an infinite family of solutions that perfectly reconstruct the data. Presented results at an international plasma physics conference, where my contributed oral talk initiated discussions toward new collaborations and research directions.</p>
+  </details>
+  <details>
+    <summary><strong>UCLA — B.C. Regan Condensed Matter Group</strong> (2024)</summary>
+    <p>Pedagogical contributions in proving the Feynman Checkerboard at a level suitable for undergraduates, illuminating an accessible way to teach propagators.</p>
+  </details>
 </section>
 
 <section id="talks">
   <h2>Selected Talks & Presentations</h2>
   <ul>
-    <li>“Benchmarking FRG-DFT with the One-Dimensional Fermi Gas” — UTRIP Final Presentation, University of Tokyo (Aug 2025)</li>
-    <li>“Data-driven statistical model of nonthermal particle acceleration” — APS Division of Plasma Physics (Oct 2024)</li>
+    <li>“<strong>Benchmarking FRG-DFT with the One-Dimensional Fermi Gas – Towards a Nonperturbative Many-Body Nuclear Theory</strong>”
+      <ul>
+        <li>UTRIP Final Presentation, The University of Tokyo, Tokyo, Japan (Aug / 2025)</li>
+      </ul>
+    </li>
+    <li>“<strong>Data-driven statistical model of nonthermal particle acceleration by the kink instability in relativistic jets</strong>”
+      <ul>
+        <li>APS Division of Plasma Physics, Atlanta, Georgia (Oct / 2024)</li>
+      </ul>
+    </li>
+    <li>“<strong>From Finite Groups to Lie Algebras: Symmetries and Representations in Physics</strong>”
+      <ul>
+        <li>Perimeter Institute PSI START Program, Bishop’s University, Sherbrooke, Quebec, Canada (May / 2025)</li>
+      </ul>
+    </li>
+  </ul>
+</section>
+
+<section id="meetings">
+  <h2>Meetings Attended</h2>
+  <ul>
+    <li><strong>California Amplitudes Meeting 2025 (LA)</strong> — Mani L. Bhaumik Institute for Theoretical Physics, UCLA (Nov / 2025)</li>
+    <li><strong>California Amplitudes Meeting 2025 (Davis)</strong> — Center for Quantum Mathematics and Physics (QMAP), UC Davis (May / 2025)</li>
+    <li><strong>66th Annual Meeting of the APS Division of Plasma Physics</strong> — Atlanta, Georgia (Oct / 2024)</li>
   </ul>
 </section>
 
 <section id="service">
   <h2>Service & Outreach</h2>
   <ul>
-    <li>Events Chair, Society of Physics Students, UCLA — Organized faculty/student talks and developed academic resources</li>
-    <li>Teaching Assistant, UCLA Physics — First undergraduate TA in department history</li>
-    <li>Member, Amplitudes Journal Club, String Theory Journal Club</li>
+    <li><strong>Professional Events Chair</strong>, Society of Physics Students, UCLA — Organized faculty/student talks, developed resources for research and course planning</li>
+    <li><strong>Teaching Assistant</strong>, UCLA Physics — Only undergraduate TA in department history</li>
+    <li><strong>Member</strong>, Amplitudes Journal Club, String Theory Journal Club, Plasma Theory Journal Club</li>
   </ul>
 </section>
 
 <div class="footer">
-  &copy; 2025 Samuel Degen — Last updated August 2025
+  2025 Samuel Degen — Last updated August 2025
 </div>
+
+<script>
+  const modeToggle = document.getElementById('modeToggle');
+  modeToggle.addEventListener('click', () => {
+    document.body.classList.toggle('light-mode');
+    modeToggle.textContent = document.body.classList.contains('light-mode') ? 'Dark Mode' : 'Light Mode';
+  });
+</script>
 
 </body>
 </html>
-
