--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
   <title>Samuel Degen | Academic Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Computer+Modern+Serif&display=swap" rel="stylesheet">
   <style>
-    html {
-      scroll-behavior: smooth;
-    }
+    html { scroll-behavior: smooth; }
     :root {
       --bg-color: #3a3a3a;
       --text-color: #eaeaea;
       --section-bg: rgba(0,0,0,0.3);
+      --button-bg-dark: #333;
       --accent-gradient: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
     }
     body.light-mode {
       --bg-color: white;
       --text-color: #333;
       --section-bg: rgba(255,255,255,0.8);
+      --button-bg-dark: rgba(255,255,255,0.8);
     }
     body {
       font-family: 'Computer Modern Serif', serif;
@@ -35,40 +35,50 @@
       border-bottom-left-radius: 20px;
       border-bottom-right-radius: 20px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.5);
-      color: #333;
     }
-    header h1 {
-      margin: 0;
-      font-size: 2.5rem;
-    }
-    header p {
-      margin: 0.5rem 0;
+    header h1, header p { color: #333; }
+    .header-info {
+      background: rgba(255,255,255,0.6);
+      display: inline-block;
+      padding: 1.5rem 3rem;
+      border-radius: 15px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
     }
     nav {
       margin-top: 1rem;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 12px;
     }
     nav a {
-      color: #333;
-      margin: 0 10px;
+      color: white;
       text-decoration: none;
       font-weight: bold;
-      background: var(--section-bg);
+      background: var(--button-bg-dark);
       padding: 0.4rem 0.8rem;
       border-radius: 8px;
+      min-width: 100px;
+      text-align: center;
       transition: background 0.3s;
     }
-    nav a:hover {
-      background: rgba(255,255,255,0.2);
-    }
+    body.light-mode nav a { color: #333; }
+    nav a:hover { filter: brightness(1.2); }
     #modeToggle {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
       font-family: 'Computer Modern Serif', serif;
-      background: var(--bg-color);
+      background: var(--section-bg);
       border: none;
       padding: 0.5rem 1rem;
       border-radius: 20px;
       color: var(--text-color);
       cursor: pointer;
-      margin-top: 1rem;
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
     }
     section {
       max-width: 900px;
@@ -78,7 +88,6 @@
       margin-top: 2rem;
       border-radius: 15px;
       box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-      transition: background 0.3s;
     }
     h2 {
       border-bottom: 3px solid transparent;
@@ -86,15 +95,9 @@
       padding-bottom: 0.5rem;
       margin-top: 0;
     }
-    ul {
-      padding-left: 1.2rem;
-    }
-    ul li strong {
-      font-weight: bold;
-    }
-    details {
-      margin-bottom: 1rem;
-    }
+    ul { padding-left: 1.2rem; }
+    ul li strong { font-weight: bold; }
+    details { margin-bottom: 1rem; }
     summary {
       cursor: pointer;
       font-weight: bold;
@@ -105,24 +108,24 @@
       padding: 1rem;
       font-size: 0.9rem;
       background: var(--accent-gradient);
-      color: #333;
+      color: #000000;
       margin-top: 2rem;
       border-top-left-radius: 20px;
       border-top-right-radius: 20px;
     }
     @media (max-width: 600px) {
-      header h1 {
-        font-size: 1.8rem;
-      }
+      header h1 { font-size: 1.8rem; }
     }
   </style>
 </head>
 <body>
 
 <header>
-  <h1>Samuel Degen</h1>
-  <p><strong>PAB 2-429</strong>, <strong>Department of Physics</strong>, UCLA, Los Angeles, CA 90024, USA</p>
-  <p>Email: <a href="mailto:degen@ucla.edu" style="color:#333;">degen@ucla.edu</a></p>
+  <div class="header-info">
+    <h1>Samuel Degen</h1>
+    <p><strong>PAB 2-429</strong><br><strong>Department of Physics</strong><br>UCLA, Los Angeles, CA 90024, USA</p>
+    <p>Email: <a href="mailto:degen@ucla.edu">degen@ucla.edu</a></p>
+  </div>
   <nav>
     <a href="#education">Education</a>
     <a href="#honors">Honors & Awards</a>
@@ -131,24 +134,37 @@
     <a href="#meetings">Meetings</a>
     <a href="#service">Service</a>
   </nav>
-  <button id="modeToggle">Dark Mode</button>
 </header>
 
 <section id="education">
   <h2>Education</h2>
   <ul>
-    <li><strong>University of California, Los Angeles (UCLA)</strong> — B.S. Physics & Mathematics (2023–Present) | GPA: 3.984 overall; 4.0 major</li>
-    <li><strong>University of Colorado Boulder</strong> — High School Concurrent Enrollment (2021–2023) | GPA: 4.0 overall</li>
+    <li><strong>University of California, Los Angeles (UCLA)</strong>
+      <ul>
+        <li>B.S. Physics & Mathematics (2023 – Present)</li>
+        <li>GPA: 3.984 overall; 4.0 major</li>
+      </ul>
+    </li>
+    <li><strong>University of Colorado Boulder</strong>
+      <ul>
+        <li>High School Concurrent Enrollment (2021 – 2023)</li>
+        <li>GPA: 4.0 overall</li>
+      </ul>
+    </li>
   </ul>
 </section>
 
 <section id="honors">
   <h2>Honors & Awards</h2>
+  <h3>2025</h3>
   <ul>
-    <li><strong>Mani L. Bhaumik Institute for Theoretical Physics Summer Research Fellowship</strong> — First undergraduate offered a summer research fellowship at UCLA’s Bhaumik Institute for Theoretical Physics (Aug / 2025)</li>
-    <li><strong>University of Tokyo Research Internship Program (UTRIP)</strong> — 1 of 14 selected from 1,149 applicants for in-person, fully funded program; <strong>FUTI Global Leadership Award</strong> recipient (Jun / 2025)</li>
-    <li><strong>Perimeter Institute’s PSI START Satellite Program</strong> — 1 of 3 international students selected for in-person, fully funded 2-week program in Quebec (May / 2025)</li>
-    <li><strong>UCLA Summer Undergraduate Research Fellowship</strong> — 1 of 2 first-year undergraduates selected for competitive paid 10-week fellowship (Summer / 2024)</li>
+    <li><strong>Mani L. Bhaumik Institute for Theoretical Physics Summer Research Fellowship</strong> — First undergraduate offered a summer research fellowship at UCLA’s Bhaumik Institute for Theoretical Physics (August 2025)</li>
+    <li><strong>University of Tokyo Research Internship Program (UTRIP)</strong> — 1 of 14 selected from 1,149 applicants for in-person, fully funded program; <strong>FUTI Global Leadership Award</strong> recipient (June 2025)</li>
+    <li><strong>Perimeter Institute’s PSI START Satellite Program</strong> — 1 of 3 international students selected for in-person, fully funded 2-week program in Quebec (May 2025)</li>
+  </ul>
+  <h3>2024</h3>
+  <ul>
+    <li><strong>UCLA Summer Undergraduate Research Fellowship</strong> — 1 of 2 first-year undergraduates selected for competitive paid 10-week fellowship (Summer 2024)</li>
   </ul>
 </section>
 
@@ -157,14 +173,17 @@
   <details>
     <summary><strong>University of Tokyo — H. Liang Nuclear Theory Group</strong> (2025–Present)</summary>
     <p>How humans can make a safe and efficient use of nuclei – such as through fission and fusion processes – is a difficult question, requiring a deep microscopic understanding of quantum many-body theories. The treatment of long-lived fission products by nuclear power plants depends strongly on the specifics of quantum many-body tunneling, a long-standing problem that requires a first principles (ab initio) theory of properties of nuclei. While there are many established microscopic nuclear theories, the only approach applicable to almost the whole nuclear chart is Density Functional Theory (DFT). Our work uses modern theoretical tools such as Effective Field Theory (EFT) and Renormalization Group (RG) Flow to construct such an ab initio nuclear DFT.</p>
+    <p><em>Supported by UTRIP 2025 and FUTI Global Leadership Award.</em></p>
   </details>
   <details>
     <summary><strong>UCLA — Z. Bern & M. Solon Scattering Amplitudes Group</strong> (2025–Present)</summary>
     <p>Research in scattering amplitudes with Z. Bern & M. Solon. Project TBD.</p>
+    <p><em>Supported by Mani L. Bhaumik Institute for Theoretical Physics Summer 2025 Research Fellowship.</em></p>
   </details>
   <details>
     <summary><strong>UCLA — E. Paulo Alves Plasma Theory Group</strong> (2024–2025)</summary>
     <p>Developed novel ML-based methods for studying time-dependent particle acceleration in relativistic astrophysical jets. My work resolves longstanding limitations of standard models by combining analytic theory and machine learning to uniquely solve ill-posed problems for the first time. Demonstrated that simple energy-dependent models are insufficient to explain the observed nonthermal particle spectrum and that these novel ML methods can be generalized to solve a large class of ill-posed problems—uniquely identifying physical solutions from an infinite family of solutions that perfectly reconstruct the data. Presented results at an international plasma physics conference, where my contributed oral talk initiated discussions toward new collaborations and research directions.</p>
+    <p><em>Supported by UCLA Physics Summer 2024 Research Fellowship.</em></p>
   </details>
   <details>
     <summary><strong>UCLA — B.C. Regan Condensed Matter Group</strong> (2024)</summary>
@@ -177,17 +196,17 @@
   <ul>
     <li>“<strong>Benchmarking FRG-DFT with the One-Dimensional Fermi Gas – Towards a Nonperturbative Many-Body Nuclear Theory</strong>”
       <ul>
-        <li>UTRIP Final Presentation, The University of Tokyo, Tokyo, Japan (Aug / 2025)</li>
+        <li>UTRIP Final Presentation, The University of Tokyo, Tokyo, Japan (August 5, 2025)</li>
       </ul>
     </li>
     <li>“<strong>Data-driven statistical model of nonthermal particle acceleration by the kink instability in relativistic jets</strong>”
       <ul>
-        <li>APS Division of Plasma Physics, Atlanta, Georgia (Oct / 2024)</li>
+        <li>APS Division of Plasma Physics, Atlanta, Georgia (October 9, 2024)</li>
       </ul>
     </li>
     <li>“<strong>From Finite Groups to Lie Algebras: Symmetries and Representations in Physics</strong>”
       <ul>
-        <li>Perimeter Institute PSI START Program, Bishop’s University, Sherbrooke, Quebec, Canada (May / 2025)</li>
+        <li>Perimeter Institute PSI START Program, Bishop’s University, Sherbrooke, Quebec, Canada (May 29, 2025)</li>
       </ul>
     </li>
   </ul>
@@ -196,9 +215,9 @@
 <section id="meetings">
   <h2>Meetings Attended</h2>
   <ul>
-    <li><strong>California Amplitudes Meeting 2025 (LA)</strong> — Mani L. Bhaumik Institute for Theoretical Physics, UCLA (Nov / 2025)</li>
-    <li><strong>California Amplitudes Meeting 2025 (Davis)</strong> — Center for Quantum Mathematics and Physics (QMAP), UC Davis (May / 2025)</li>
-    <li><strong>66th Annual Meeting of the APS Division of Plasma Physics</strong> — Atlanta, Georgia (Oct / 2024)</li>
+    <li><strong>California Amplitudes Meeting 2025 (LA)</strong> — Mani L. Bhaumik Institute for Theoretical Physics, UCLA (November 2025)</li>
+    <li><strong>California Amplitudes Meeting 2025 (Davis)</strong> — Center for Quantum Mathematics and Physics (QMAP), UC Davis (May 2025)</li>
+    <li><strong>66th Annual Meeting of the APS Division of Plasma Physics</strong> — Atlanta, Georgia (October 2024)</li>
   </ul>
 </section>
 
@@ -206,7 +225,7 @@
   <h2>Service & Outreach</h2>
   <ul>
     <li><strong>Professional Events Chair</strong>, Society of Physics Students, UCLA — Organized faculty/student talks, developed resources for research and course planning</li>
-    <li><strong>Teaching Assistant</strong>, UCLA Physics — Only undergraduate TA in department history</li>
+    <li><strong>Teaching Assistant</strong>, UCLA Physics — Only undergraduate TA in department</li>
     <li><strong>Member</strong>, Amplitudes Journal Club, String Theory Journal Club, Plasma Theory Journal Club</li>
   </ul>
 </section>
@@ -215,11 +234,17 @@
   2025 Samuel Degen — Last updated August 2025
 </div>
 
+<button id="modeToggle">🌙 Dark Mode</button>
+
 <script>
   const modeToggle = document.getElementById('modeToggle');
   modeToggle.addEventListener('click', () => {
     document.body.classList.toggle('light-mode');
-    modeToggle.textContent = document.body.classList.contains('light-mode') ? 'Dark Mode' : 'Light Mode';
+    if (document.body.classList.contains('light-mode')) {
+      modeToggle.textContent = '🌙 Dark Mode';
+    } else {
+      modeToggle.textContent = '☀️ Light Mode';
+    }
   });
 </script>
 
