connected new images to gallery

--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
     <div class="viewport" id="carouselViewport">
       <div class="track" id="carouselTrack">
         <!-- Initial single set; JS will triplicate for seamless loop -->
-        <div class="slide"><img src="images/gallery-1.jpg" alt="Gallery image 1" loading="lazy" onerror="this.style.display='none'" /></div>
-        <div class="slide"><img src="images/gallery-2.jpg" alt="Gallery image 2" loading="lazy" onerror="this.style.display='none'" /></div>
-        <div class="slide"><img src="images/gallery-3.jpg" alt="Gallery image 3" loading="lazy" onerror="this.style.display='none'" /></div>
-        <div class="slide"><img src="images/gallery-4.jpg" alt="Gallery image 4" loading="lazy" onerror="this.style.display='none'" /></div>
+        <div class="slide"><img src="images/gallery/utrip_welcome_talk.JPEG" alt="Gallery image 1" loading="lazy" onerror="this.style.display='none'" /></div>
+        <div class="slide"><img src="images/gallery/aps_dpp_66.JPG" alt="Gallery image 2" loading="lazy" onerror="this.style.display='none'" /></div>
+        <div class="slide"><img src="images/gallery/utrip_yasuda.JPEG" alt="Gallery image 3" loading="lazy" onerror="this.style.display='none'" /></div>
+        <div class="slide"><img src="images/gallery/utrip_welcome_group.JPEG" alt="Gallery image 4" loading="lazy" onerror="this.style.display='none'" /></div>
       </div>
     </div>
     <button class="nav-btn left" id="prevBtn" aria-label="Previous image">‹</button>
