--- a/index.html
+++ b/index.html
@@ -187,7 +187,10 @@
         <div class="slide"><img src="images/gallery/utrip_welcome_talk.JPEG" alt="Gallery image 1" loading="lazy" onerror="this.style.display='none'" /></div>
         <div class="slide"><img src="images/gallery/aps_dpp_66.JPG" alt="Gallery image 2" loading="lazy" onerror="this.style.display='none'" /></div>
         <div class="slide"><img src="images/gallery/utrip_yasuda.JPEG" alt="Gallery image 3" loading="lazy" onerror="this.style.display='none'" /></div>
+        <div class="slide"><img src="images/gallery/utrip_advisor.jpg" alt="Gallery image 5" loading="lazy" onerror="this.style.display='none'" /></div>
+        <div class="slide"><img src="images/gallery/ucla_reu_invited_title.JPG" alt="Gallery image 6" loading="lazy" onerror="this.style.display='none'" /></div>
         <div class="slide"><img src="images/gallery/utrip_welcome_group.JPEG" alt="Gallery image 4" loading="lazy" onerror="this.style.display='none'" /></div>
+        <div class="slide"><img src="images/gallery/ucla_reu_invited_eft.jpg" alt="Gallery image 7" loading="lazy" onerror="this.style.display='none'" /></div>
       </div>
     </div>
     <button class="nav-btn left" id="prevBtn" aria-label="Previous image">‹</button>
