--- a/index.html
+++ b/index.html
@@ -238,11 +238,11 @@
     </details>
     <details>
       <summary><strong>UCLA — Z. Bern &amp; M. Solon Scattering Amplitudes Group</strong> (2025–Present)</summary>
-      <p>Research in scattering amplitudes with Z. Bern &amp; M. Solon. Project TBD.</p>
+      <p>Project TBD.</p>
       <p><em>Supported by Mani L. Bhaumik Institute for Theoretical Physics Summer 2025 Research Fellowship.</em></p>
     </details>
     <details>
-      <summary><strong>UCLA — E. Paulo Alves Plasma Theory Group</strong> (2024–2025)</summary>
+      <summary><strong>UCLA — E.P. Alves Plasma Theory Group</strong> (2024–2025)</summary>
       <p>Developed novel ML-based methods for studying time-dependent particle acceleration in relativistic astrophysical jets. My work resolves longstanding limitations of standard models by combining analytic theory and machine learning to uniquely solve ill-posed problems for the first time. Demonstrated that simple energy-dependent models are insufficient to explain the observed nonthermal particle spectrum and that these novel ML methods can be generalized to solve a large class of ill-posed problems—uniquely identifying physical solutions from an infinite family of solutions that perfectly reconstruct the data. Presented results at an international plasma physics conference, where my contributed oral talk initiated discussions toward new collaborations and research directions.</p>
       <p><em>Supported by UCLA Physics Summer 2024 Research Fellowship.</em></p>
     </details>
@@ -255,6 +255,11 @@
   <section id="talks">
     <h2>Selected Talks &amp; Presentations</h2>
     <ul>
+      <li>“<strong>Physics Without Borders: Nuclear Theory and Global Perspectives from a Summer in Tokyo</strong>”
+        <ul>
+          <li><span style="color: red;">(invited)</span> UCLA Research Experiences for Undergraduates (REU) Special Seminar, UCLA (August 15, 2025)</li>
+        </ul>
+      </li>
       <li>“<strong>Benchmarking FRG-DFT with the One-Dimensional Fermi Gas – Towards a Nonperturbative Many-Body Nuclear Theory</strong>”
         <ul>
           <li>UTRIP Final Presentation, The University of Tokyo, Tokyo, Japan (August 5, 2025)</li>
@@ -286,7 +291,7 @@
     <h2>Service &amp; Outreach</h2>
     <ul>
       <li><strong>Professional Events Chair</strong>, Society of Physics Students, UCLA — Organized faculty/student talks, developed resources for research and course planning</li>
-      <li><strong>Teaching Assistant</strong>, UCLA Physics — Only undergraduate TA in department</li>
+      <li><strong>Teaching Assistant</strong>, UCLA Physics — only undergraduate trained as TA, appointments starting 2025</li>
       <li><strong>Member</strong>, Amplitudes Journal Club, String Theory Journal Club, Plasma Theory Journal Club</li>
     </ul>
   </section>
