--- a/index.html
+++ b/index.html
@@ -219,8 +219,9 @@
     <h2>Honors &amp; Awards</h2>
     <h3>2025</h3>
     <ul>
+      <li><strong>UCLA Undergraduate Research Scholars Program (URSP)</strong> — year-long research scholarship (2025 - 2026)</li> <!-- supporting proposed work on gravitational wave scattering with Mikhail Solon (2025 - 2026)</li> -->
       <li><strong>Mani L. Bhaumik Institute for Theoretical Physics Summer Research Fellowship</strong> — First undergraduate offered a summer research fellowship at UCLA’s Bhaumik Institute for Theoretical Physics (August 2025)</li>
-      <li><strong>University of Tokyo Research Internship Program (UTRIP)</strong> — 1 of 14 selected from 1,149 applicants for in-person, fully funded program; <strong>FUTI Global Leadership Award</strong> recipient (June 2025)</li>
+      <li><strong>University of Tokyo Research Internship Program (UTRIP)</strong> — 1 of 14 selected from 1,149 applicants for in-person, fully funded research and culture program; <strong>FUTI Global Leadership Award</strong> recipient (June 2025)</li>
       <li><strong>Perimeter Institute’s PSI START Satellite Program</strong> — 1 of 3 international students selected for in-person, fully funded 2-week program in Quebec (May 2025)</li>
     </ul>
     <h3>2024</h3>
@@ -239,7 +240,7 @@
     <details>
       <summary><strong>UCLA — Z. Bern &amp; M. Solon Scattering Amplitudes Group</strong> (2025–Present)</summary>
       <p>Project TBD.</p>
-      <p><em>Supported by Mani L. Bhaumik Institute for Theoretical Physics Summer 2025 Research Fellowship.</em></p>
+      <p><em>Supported by Mani L. Bhaumik Institute for Theoretical Physics Summer 2025 Research Fellowship and 2025 - 2026 UCLA URSP.</em></p>
     </details>
     <details>
       <summary><strong>UCLA — E.P. Alves Plasma Theory Group</strong> (2024–2025)</summary>
@@ -257,7 +258,7 @@
     <ul>
       <li>“<strong>Physics Without Borders: Nuclear Theory and Global Perspectives from a Summer in Tokyo</strong>”
         <ul>
-          <li><span style="color: red;">(invited)</span> UCLA Research Experiences for Undergraduates (REU) Special Seminar, UCLA (August 15, 2025)</li>
+          <li><span style="color: rgb(25, 181, 46);">(invited)</span> UCLA Research Experiences for Undergraduates (REU) Special Seminar, UCLA (August 15, 2025)</li>
         </ul>
       </li>
       <li>“<strong>Benchmarking FRG-DFT with the One-Dimensional Fermi Gas – Towards a Nonperturbative Many-Body Nuclear Theory</strong>”
@@ -282,6 +283,7 @@
     <h2>Meetings Attended</h2>
     <ul>
       <li><strong>California Amplitudes Meeting 2025 (LA)</strong> — Mani L. Bhaumik Institute for Theoretical Physics, UCLA (November 2025)</li>
+      <li><strong>2025 Annual Meeting of the APS Far West Section</strong> — UC Santa Cruz (October 2025)</li>
       <li><strong>California Amplitudes Meeting 2025 (Davis)</strong> — Center for Quantum Mathematics and Physics (QMAP), UC Davis (May 2025)</li>
       <li><strong>66th Annual Meeting of the APS Division of Plasma Physics</strong> — Atlanta, Georgia (October 2024)</li>
     </ul>
