change website name to just "Samuel Degen"

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Samuel Degen | Academic Portfolio</title>
+  <title>Samuel Degen</title>
   <style>
     /* THEME TOKENS */
     html { scroll-behavior: smooth; }
