added summary box + revised content

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       </div>
       <div class="text-col">
         <h1>Samuel Degen</h1>
-        <p><strong>PAB 2-429, Dept. of Physics, UCLA</strong><br>Los Angeles, CA 90024, USA</p>
+        <p><strong>Department of Physics, UCLA</strong><br>Los Angeles, CA 90024, USA</p>
         <div class="btn-row">
           <a class="download-btn" href="mailto:degen@ucla.edu" aria-label="Email Samuel Degen">
             <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M3 6h18v12H3z" fill="none" stroke="currentColor" stroke-width="1.5"/><path d="M3 7l9 6 9-6" fill="none" stroke="currentColor" stroke-width="1.5"/></svg>
@@ -180,6 +180,11 @@
 </header>
 
 <main class="page">
+  <section id="summary">
+    <!-- <h2>Overview</h2> -->
+    <p>Samuel Degen is a third-year physics major and URSP Scholar at UCLA researching theoretical frameworks that connect quantum field theory, gravity, and nuclear physics. His projects at UCLA and the University of Tokyo aim to improve theoretical predictions for next-generation gravitational wave and ultracold atom experiments using powerful effective methods from quantum field theory. Samuel has presented his work internationally and received multiple fellowships recognizing his independent contributions. He is deeply committed to mentorship and accessibility in science and plans to continue fostering these values as he pursues a career in academia.</p>
+  </section>
+
   <!-- GALLERY: center-peek, wraps 1→2→3→4→1 ... with cloned ends -->
   <div class="carousel" aria-label="Image gallery">
     <div class="viewport" id="carouselViewport">
@@ -234,12 +239,12 @@
     <h2>Research Experience</h2>
     <details>
       <summary><strong>University of Tokyo — H. Liang Nuclear Theory Group</strong> (2025–Present)</summary>
-      <p>How humans can make a safe and efficient use of nuclei – such as through fission and fusion processes – is a difficult question, requiring a deep microscopic understanding of quantum many-body theories. The treatment of long-lived fission products by nuclear power plants depends strongly on the specifics of quantum many-body tunneling, a long-standing problem that requires a first principles (ab initio) theory of properties of nuclei. While there are many established microscopic nuclear theories, the only approach applicable to almost the whole nuclear chart is Density Functional Theory (DFT). Our work uses modern theoretical tools such as Effective Field Theory (EFT) and Renormalization Group (RG) Flow to construct such an ab initio nuclear DFT.</p>
+      <p>A deep microscopic understanding of quantum many-body theories would revolution- ize many fields from nucleosynthesis and reactor design to neutron-star physics and ultracold atom experiments. Density Functional Theory (DFT) is the only approach applicable across nearly the entire nuclear chart, making its derivation from first prin- ciples a hot topic in recent years. Modern theoretical tools such as the Functional Renormalization Group (FRG) have enabled a first-principles formulation of DFT, known as the FRG-DFT. Though applied to 2D and 3D electrons with Coulomb in- teractions, a theoretical benchmark and connection to experiment remain missing. We address this gap by applying FRG-DFT to the exactly solvable Gaudin-Yang model: a strongly coupled 1D Fermi gas experimentally realizable with ultracold atoms. We de- rive the exact infinite hierarchy of coupled flow equations for the ground state energy, and explicit spin dependence enables extension to the spin-unsaturated electron gas. We truncate the hierarchy to compare our first-principles equation of state calculation to perturbation theory, competing methods, and the exact solution. Our results estab- lish a clear theoretical benchmark for FRG-DFT and lay foundation for its extension to realistic higher-dimensional many-body systems.</p>
       <p><em>Supported by UTRIP 2025 and FUTI Global Leadership Award.</em></p>
     </details>
     <details>
       <summary><strong>UCLA — Z. Bern &amp; M. Solon Scattering Amplitudes Group</strong> (2025–Present)</summary>
-      <p>Project TBD.</p>
+      <p>This project develops a new field-theoretic framework to understand how black holes interact with their surrounding environment, such as gas or dark matter, and how these interactions leave imprints on gravitational wave signals. Inspired by methods from gravitational self-force and tidal effective field theory, it aims to model the drag forces experienced by black holes as they move through a medium and predict how these effects could be detected with next-generation observatories. This approach is exciting because it could offer new ways to probe dark matter experimentally or shed new light on the process of jet quenching in QCD, potentially linking similar gravitational, particle, and astrophysical phenomena through a common theoretical language.</p>
       <p><em>Supported by Mani L. Bhaumik Institute for Theoretical Physics Summer 2025 Research Fellowship and 2025 - 2026 UCLA URSP.</em></p>
     </details>
     <details>
@@ -258,17 +263,18 @@
     <ul>
       <li>“<strong>Physics Without Borders: Nuclear Theory and Global Perspectives from a Summer in Tokyo</strong>”
         <ul>
-          <li><span style="color: rgb(25, 181, 46);">(invited)</span> UCLA Research Experiences for Undergraduates (REU) Special Seminar, UCLA (August 15, 2025)</li>
+          <li><span style="color: rgb(25, 181, 46);">(invited)</span> Research Experiences for Undergraduates (REU) Special Seminar, UCLA (August 15, 2025)</li>
         </ul>
       </li>
       <li>“<strong>Benchmarking FRG-DFT with the One-Dimensional Fermi Gas – Towards a Nonperturbative Many-Body Nuclear Theory</strong>”
         <ul>
           <li>UTRIP Final Presentation, The University of Tokyo, Tokyo, Japan (August 5, 2025)</li>
+          <li><a href="https://meetings.aps.org/Meeting/FWS25/Session/L04.5">APS Far West Section</a>, UC Santa Cruz (October 11, 2025)</li>
         </ul>
       </li>
       <li>“<strong>Data-driven statistical model of nonthermal particle acceleration by the kink instability in relativistic jets</strong>”
         <ul>
-          <li>APS Division of Plasma Physics, Atlanta, Georgia (October 9, 2024)</li>
+          <li><a href="https://meetings.aps.org/Meeting/DPP24/Session/NO05.14">APS Division of Plasma Physics</a>, Atlanta, Georgia (October 9, 2024)</li>
         </ul>
       </li>
       <li>“<strong>From Finite Groups to Lie Algebras: Symmetries and Representations in Physics</strong>”
@@ -284,6 +290,7 @@
     <ul>
       <li><strong>California Amplitudes Meeting 2025 (LA)</strong> — Mani L. Bhaumik Institute for Theoretical Physics, UCLA (November 2025)</li>
       <li><strong>2025 Annual Meeting of the APS Far West Section</strong> — UC Santa Cruz (October 2025)</li>
+      <li><strong>2025 Southern California Strings</strong> — Mani L. Bhaumik Institute for Theoretical Physics, UCLA (October 2025)</li>
       <li><strong>California Amplitudes Meeting 2025 (Davis)</strong> — Center for Quantum Mathematics and Physics (QMAP), UC Davis (May 2025)</li>
       <li><strong>66th Annual Meeting of the APS Division of Plasma Physics</strong> — Atlanta, Georgia (October 2024)</li>
     </ul>
@@ -291,15 +298,21 @@
 
   <section id="service">
     <h2>Service &amp; Outreach</h2>
+    <h3>Interviews &amp; Press</h3>
     <ul>
-      <li><strong>Professional Events Chair</strong>, Society of Physics Students, UCLA — Organized faculty/student talks, developed resources for research and course planning</li>
-      <li><strong>Teaching Assistant</strong>, UCLA Physics — only undergraduate trained as TA, appointments starting 2025</li>
-      <li><strong>Member</strong>, Amplitudes Journal Club, String Theory Journal Club, Plasma Theory Journal Club</li>
+      <li><strong><a href="https://www.ubishops.ca/samuel-degen-perimeter-at-b-u/">Perimeter Institute’s PSI START Satellite Interview</a></strong> (May 2025)</li>
+      <li><strong><a href="">FUTI Global Leadership Award</a></strong> (upcoming)</li>
+    </ul>
+    <h3>Activities</h3>
+    <ul>
+      <li><strong>Professional Events Chair</strong>, Society of Physics Students, UCLA — developed resources for research and course planning</li>
+      <li><strong>Teaching Assistant Training</strong>, UCLA Physics — only undergraduate trained as TA, appointments pending improved department funding</li>
+      <li><strong>Member</strong>, Amplitudes Journal Club, String Theory Journal Club, Plasma Theory Journal Club @ UCLA</li>
     </ul>
   </section>
 </main>
 
-<div class="footer">© 2025 Samuel Degen — Last updated August 2025</div>
+<div class="footer">© 2025 Samuel Degen — Last updated October 2025</div>
 
 <button id="modeToggle" aria-label="Toggle dark/light mode"></button>
 
