--- a/index.html
+++ b/index.html
@@ -35,6 +35,28 @@
 
     /* TYPOGRAPHY */
     body { font-family: 'Calibre', 'Calibri', 'Helvetica Neue', Helvetica, Arial, system-ui, -apple-system, Segoe UI, sans-serif; margin: 0; background: var(--bg-color); color: var(--text-color); line-height: 1.6; transition: background 0.3s, color 0.3s; }
+    main a {
+      color: #225ee8;
+      text-decoration-color: rgba(34, 94, 232, 0.5);
+      transition: color 0.2s ease, text-decoration-color 0.2s ease;
+    }
+    main a:visited {
+      color: #1f55cf;
+    }
+    main a:hover,
+    main a:focus-visible {
+      color: #174ac6;
+      text-decoration-color: currentColor;
+    }
+    body:not(.light-mode) main a,
+    body:not(.light-mode) main a:visited {
+      color: #a1d2ff;
+      text-decoration-color: rgba(161, 210, 255, 0.65);
+    }
+    body:not(.light-mode) main a:hover,
+    body:not(.light-mode) main a:focus-visible {
+      color: #c6e2ff;
+    }
 
     /* HEADER */
     header { background: var(--accent-gradient); padding: 2rem 1rem var(--hdr-gap); text-align: center; border-bottom-left-radius: 20px; border-bottom-right-radius: 20px; box-shadow: 0 4px 20px rgba(0,0,0,0.5); }
@@ -181,7 +203,7 @@
 
 <main class="page">
   <section id="summary">
-    <!-- <h2>Overview</h2> -->
+    <h2>About</h2>
     <p>Samuel Degen is a third-year physics major and URSP Scholar at UCLA researching theoretical frameworks that connect quantum field theory, gravity, and nuclear physics. His projects at UCLA and the University of Tokyo aim to improve theoretical predictions for next-generation gravitational wave and ultracold atom experiments using powerful effective methods from quantum field theory. Samuel has presented his work internationally and received multiple fellowships recognizing his independent contributions. He is deeply committed to mentorship and accessibility in science and plans to continue fostering these values as he pursues a career in academia.</p>
   </section>
 
@@ -301,7 +323,7 @@
     <h3>Interviews &amp; Press</h3>
     <ul>
       <li><strong><a href="https://www.ubishops.ca/samuel-degen-perimeter-at-b-u/">Perimeter Institute’s PSI START Satellite Interview</a></strong> (May 2025)</li>
-      <li><strong><a href="">FUTI Global Leadership Award</a></strong> (upcoming)</li>
+      <li><strong>FUTI Global Leadership Award</strong> (upcoming)</li>
     </ul>
     <h3>Activities</h3>
     <ul>
@@ -321,14 +343,41 @@
   const modeToggle = document.getElementById('modeToggle');
   const sunIcon = '<svg viewBox="0 0 24 24" aria-hidden="true"><circle cx="12" cy="12" r="4" fill="none" stroke="currentColor" stroke-width="1.5"/><g stroke="currentColor" stroke-width="1.5" stroke-linecap="round"><line x1="12" y1="2" x2="12" y2="5"/><line x1="12" y1="19" x2="12" y2="22"/><line x1="2" y1="12" x2="5" y2="12"/><line x1="19" y1="12" x2="22" y2="12"/><line x1="4.2" y1="4.2" x2="6.5" y2="6.5"/><line x1="17.5" y1="17.5" x2="19.8" y2="19.8"/><line x1="4.2" y1="19.8" x2="6.5" y2="17.5"/><line x1="17.5" y1="6.5" x2="19.8" y2="4.2"/></g></svg>';
   const moonIcon = '<svg viewBox="0 0 24 24" aria-hidden="true"><path d="M21 12.6A8.5 8.5 0 1 1 11.4 3 6.5 6.5 0 0 0 21 12.6z" fill="none" stroke="currentColor" stroke-width="1.5"/></svg>';
+  const THEME_STORAGE_KEY = 'samueldegen-theme';
+
+  function currentTheme(){ return document.body.classList.contains('light-mode') ? 'light' : 'dark'; }
+  function applyStoredTheme(){
+    try {
+      const stored = localStorage.getItem(THEME_STORAGE_KEY);
+      if (stored === 'dark') {
+        document.body.classList.remove('light-mode');
+      } else if (stored === 'light') {
+        document.body.classList.add('light-mode');
+      } else if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+        document.body.classList.remove('light-mode');
+      }
+    } catch (err) {
+      /* localStorage might be unavailable; default to markup */
+    }
+  }
+  function persistTheme(){
+    try { localStorage.setItem(THEME_STORAGE_KEY, currentTheme()); }
+    catch (err) { /* ignore */ }
+  }
   function updateModeToggle(){
     const isLight = document.body.classList.contains('light-mode');
     const label = isLight ? 'Dark Mode' : 'Light Mode';
     modeToggle.innerHTML = (isLight ? moonIcon : sunIcon) + '<span class="label">' + label + '</span>';
     modeToggle.setAttribute('aria-label', isLight ? 'Switch to dark mode' : 'Switch to light mode');
   }
-  modeToggle.addEventListener('click', () => { document.body.classList.toggle('light-mode'); updateModeToggle(); });
+
+  applyStoredTheme();
   updateModeToggle();
+  modeToggle.addEventListener('click', () => {
+    document.body.classList.toggle('light-mode');
+    persistTheme();
+    updateModeToggle();
+  });
 
   // === Center-peek carousel using triplicate set for seamless wrap ===
   const viewport = document.getElementById('carouselViewport');
@@ -415,17 +464,4 @@
   window.addEventListener('load', () => { slides = Array.from(track.children); centerOn(index, false); startAuto(); });
   window.addEventListener('resize', () => centerOn(index, false));
 
-  track.addEventListener('transitionend', (e)=>{ if (e.target !== track || e.propertyName !== 'transform') return; isAnimating = false; });
-
-  // Controls — keep autoscroll running after clicks
-  prevBtn.addEventListener('click', () => { go(-1); restartAuto(); });
-  nextBtn.addEventListener('click', () => { go(1); restartAuto(); });
-
-  // Touch swipe handling
-  let sx=0, sy=0, st=0;
-  viewport.addEventListener('touchstart', e=>{ if(!e.touches[0]) return; sx=e.touches[0].clientX; sy=e.touches[0].clientY; st=Date.now(); stopAuto(); }, {passive:true});
-  viewport.addEventListener('touchend', e=>{ const dx=(e.changedTouches[0]?.clientX||0)-sx; const dy=(e.changedTouches[0]?.clientY||0)-sy; const dt=Date.now()-st; const horiz = Math.abs(dx)>Math.abs(dy) && Math.abs(dx)>30 && dt<600; if(horiz){ go(dx<0?1:-1); } restartAuto(); }, {passive:true});
-</script>
-
-</body>
-</html>
+  track.addEventListener('transitionend', (e)=>{ if (e.target !== tr
