--- a/index.html
+++ b/index.html
@@ -464,4 +464,17 @@
   window.addEventListener('load', () => { slides = Array.from(track.children); centerOn(index, false); startAuto(); });
   window.addEventListener('resize', () => centerOn(index, false));
 
-  track.addEventListener('transitionend', (e)=>{ if (e.target !== tr
+  track.addEventListener('transitionend', (e)=>{ if (e.target !== track || e.propertyName !== 'transform') return; isAnimating = false; });
+
+  // Controls — keep autoscroll running after clicks
+  prevBtn.addEventListener('click', () => { go(-1); restartAuto(); });
+  nextBtn.addEventListener('click', () => { go(1); restartAuto(); });
+
+  // Touch swipe handling
+  let sx=0, sy=0, st=0;
+  viewport.addEventListener('touchstart', e=>{ if(!e.touches[0]) return; sx=e.touches[0].clientX; sy=e.touches[0].clientY; st=Date.now(); stopAuto(); }, {passive:true});
+  viewport.addEventListener('touchend', e=>{ const dx=(e.changedTouches[0]?.clientX||0)-sx; const dy=(e.changedTouches[0]?.clientY||0)-sy; const dt=Date.now()-st; const horiz = Math.abs(dx)>Math.abs(dy) && Math.abs(dx)>30 && dt<600; if(horiz){ go(dx<0?1:-1); } restartAuto(); }, {passive:true});
+</script>
+
+</body>
+</html>
