--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="images/favicon/sd_red_seal_square.png" type="image/png" />
   <title>Samuel Degen</title>
   <style>
     /* THEME TOKENS */
