--- a/index.html
+++ b/index.html
@@ -421,4 +421,89 @@
   const fragRight = document.createDocumentFragment();
   originals.forEach(s => fragLeft.appendChild(s.cloneNode(true)));
   originals.forEach(s => fragRight.appendChild(s.cloneNode(true)));
-  track.insertBefore(fr
+  track.insertBefore(fragLeft, track.firstChild);
+  track.appendChild(fragRight);
+
+  let slides = Array.from(track.children);
+  let index = N; // start on the first slide of the middle block
+  let autoTimer = null;
+  let isAnimating = false;
+
+  function slideOffset(i){
+    const s = slides[i];
+    const styles = getComputedStyle(viewport);
+    const padL = parseFloat(styles.paddingLeft) || 0;
+    const padR = parseFloat(styles.paddingRight) || 0;
+    const vpW = viewport.clientWidth;
+    const sW = s.clientWidth;
+    const left = s.offsetLeft;
+
+    // Identify the first/last real slide within the middle block
+    const isFirstReal = (i === N);
+    const isLastReal  = (i === 2*N - 1);
+
+    // Edge behavior: hide outside neighbor at the ends
+    if (isFirstReal) {
+      // Align left edge of the first real slide with the viewport's left padding
+      return left - padL;
+    }
+    if (isLastReal) {
+      // Align right edge of the last real slide with the viewport's right padding
+      return (left + sW) - (vpW - padR);
+    }
+
+    // Middle slides: perfectly center so both left and right previews are visible
+    return left - (vpW - sW)/2;
+  }
+  function setActive(i){ slides.forEach((el, k) => el.classList.toggle('active', k === i)); }
+  function centerOn(i, animate=true){
+    if(!animate){ track.classList.add('no-anim'); }
+    else { track.classList.remove('no-anim'); isAnimating = true; }
+    const left = slideOffset(i);
+    track.style.transform = `translate3d(${-left}px,0,0)`;
+    setActive(i);
+    if(!animate){ requestAnimationFrame(()=> track.classList.remove('no-anim')); }
+  }
+
+  function prewrap(target){
+    if (target >= 2*N) { // jumped past right edge — snap back by N before animating
+      index = target - N;
+      centerOn(index, false);
+      return index;
+    } else if (target < N) { // jumped past left edge — snap forward by N before animating
+      index = target + N;
+      centerOn(index, false);
+      return index;
+    }
+    return target;
+  }
+
+  function go(delta){
+    if (isAnimating) return;
+    let target = index + delta;
+    target = prewrap(target); // ensure we are in the middle block before animating
+    index = target;
+    centerOn(index, true);
+  }
+
+  function startAuto(){ stopAuto(); autoTimer = setInterval(()=> go(1), 5000); }
+  function stopAuto(){ if (autoTimer){ clearInterval(autoTimer); autoTimer=null; } }
+  function restartAuto(){ stopAuto(); startAuto(); }
+
+  window.addEventListener('load', () => { slides = Array.from(track.children); centerOn(index, false); startAuto(); });
+  window.addEventListener('resize', () => centerOn(index, false));
+
+  track.addEventListener('transitionend', (e)=>{ if (e.target !== track || e.propertyName !== 'transform') return; isAnimating = false; });
+
+  // Controls — keep autoscroll running after clicks
+  prevBtn.addEventListener('click', () => { go(-1); restartAuto(); });
+  nextBtn.addEventListener('click', () => { go(1); restartAuto(); });
+
+  // Touch swipe handling
+  let sx=0, sy=0, st=0;
+  viewport.addEventListener('touchstart', e=>{ if(!e.touches[0]) return; sx=e.touches[0].clientX; sy=e.touches[0].clientY; st=Date.now(); stopAuto(); }, {passive:true});
+  viewport.addEventListener('touchend', e=>{ const dx=(e.changedTouches[0]?.clientX||0)-sx; const dy=(e.changedTouches[0]?.clientY||0)-sy; const dt=Date.now()-st; const horiz = Math.abs(dx)>Math.abs(dy) && Math.abs(dx)>30 && dt<600; if(horiz){ go(dx<0?1:-1); } restartAuto(); }, {passive:true});
+</script>
+
+</body>
+</html>
