italicized all dates

--- a/index.html
+++ b/index.html
@@ -258,13 +258,13 @@
     <ul>
       <li><strong>University of California, Los Angeles (UCLA)</strong>
         <ul>
-          <li>B.S. Physics &amp; Mathematics (2023 – Present)</li>
+          <li>B.S. Physics &amp; Mathematics (<em>2023 – Present</em>)</li>
           <li>GPA: 3.984 overall; 4.0 major</li>
         </ul>
       </li>
       <li><strong>University of Colorado Boulder</strong>
         <ul>
-          <li>High School Concurrent Enrollment (2021 – 2023)</li>
+          <li>High School Concurrent Enrollment (<em>2021 – 2023</em>)</li>
           <li>GPA: 4.0 overall</li>
         </ul>
       </li>
@@ -286,29 +286,29 @@
     </ul>
     <h3>2024</h3>
     <ul>
-      <li><strong>UCLA Summer Undergraduate Research Fellowship</strong> — 1 of 2 first-year undergraduates selected for competitive paid 10-week fellowship (Summer 2024)</li>
+      <li><strong>UCLA Summer Undergraduate Research Fellowship</strong> — 1 of 2 first-year undergraduates selected for competitive paid 10-week fellowship (<em>Summer 2024</em>)</li>
     </ul>
   </section>
 
   <section id="research">
     <h2>Research Experience</h2>
     <details>
-      <summary><strong>University of Tokyo — H. Liang Nuclear Theory Group</strong> (2025–Present)</summary>
+      <summary><strong>University of Tokyo — H. Liang Nuclear Theory Group</strong> (<em>2025–Present</em>)</summary>
       <p>A deep microscopic understanding of quantum many-body theories would revolution- ize many fields from nucleosynthesis and reactor design to neutron-star physics and ultracold atom experiments. Density Functional Theory (DFT) is the only approach applicable across nearly the entire nuclear chart, making its derivation from first prin- ciples a hot topic in recent years. Modern theoretical tools such as the Functional Renormalization Group (FRG) have enabled a first-principles formulation of DFT, known as the FRG-DFT. Though applied to 2D and 3D electrons with Coulomb in- teractions, a theoretical benchmark and connection to experiment remain missing. We address this gap by applying FRG-DFT to the exactly solvable Gaudin-Yang model: a strongly coupled 1D Fermi gas experimentally realizable with ultracold atoms. We de- rive the exact infinite hierarchy of coupled flow equations for the ground state energy, and explicit spin dependence enables extension to the spin-unsaturated electron gas. We truncate the hierarchy to compare our first-principles equation of state calculation to perturbation theory, competing methods, and the exact solution. Our results estab- lish a clear theoretical benchmark for FRG-DFT and lay foundation for its extension to realistic higher-dimensional many-body systems.</p>
       <p><em>Supported by UTRIP 2025 and FUTI Global Leadership Award.</em></p>
     </details>
     <details>
-      <summary><strong>UCLA — Z. Bern &amp; M. Solon Scattering Amplitudes Group</strong> (2025–Present)</summary>
+      <summary><strong>UCLA — Z. Bern &amp; M. Solon Scattering Amplitudes Group</strong> (<em>2025–Present</em>)</summary>
       <p>This project develops a new field-theoretic framework to understand how black holes interact with their surrounding environment, such as gas or dark matter, and how these interactions leave imprints on gravitational wave signals. Inspired by methods from gravitational self-force and tidal effective field theory, it aims to model the drag forces experienced by black holes as they move through a medium and predict how these effects could be detected with next-generation observatories. This approach is exciting because it could offer new ways to probe dark matter experimentally or shed new light on the process of jet quenching in QCD, potentially linking similar gravitational, particle, and astrophysical phenomena through a common theoretical language.</p>
       <p><em>Supported by Mani L. Bhaumik Institute for Theoretical Physics Summer 2025 Research Fellowship and 2025 - 2026 UCLA URSP.</em></p>
     </details>
     <details>
-      <summary><strong>UCLA — E.P. Alves Plasma Theory Group</strong> (2024–2025)</summary>
+      <summary><strong>UCLA — E.P. Alves Plasma Theory Group</strong> (<em>2024–2025</em>)</summary>
       <p>Developed novel ML-based methods for studying time-dependent particle acceleration in relativistic astrophysical jets. My work resolves longstanding limitations of standard models by combining analytic theory and machine learning to uniquely solve ill-posed problems for the first time. Demonstrated that simple energy-dependent models are insufficient to explain the observed nonthermal particle spectrum and that these novel ML methods can be generalized to solve a large class of ill-posed problems—uniquely identifying physical solutions from an infinite family of solutions that perfectly reconstruct the data. Presented results at an international plasma physics conference, where my contributed oral talk initiated discussions toward new collaborations and research directions.</p>
       <p><em>Supported by UCLA Physics Summer 2024 Research Fellowship.</em></p>
     </details>
     <details>
-      <summary><strong>UCLA — B.C. Regan Condensed Matter Group</strong> (2024)</summary>
+      <summary><strong>UCLA — B.C. Regan Condensed Matter Group</strong> (<em>2024</em>)</summary>
       <p>Pedagogical contributions in proving the Feynman Checkerboard at a level suitable for undergraduates, illuminating an accessible way to teach propagators.</p>
     </details>
   </section>
@@ -318,23 +318,23 @@
     <ul>
       <li>“<strong>Physics Without Borders: Nuclear Theory and Global Perspectives from a Summer in Tokyo</strong>”
         <ul>
-          <li><span style="color: rgb(25, 181, 46);">(invited)</span> Research Experiences for Undergraduates (REU) Special Seminar, UCLA (August 15, 2025)</li>
+          <li><span style="color: rgb(25, 181, 46);">(invited)</span> Research Experiences for Undergraduates (REU) Special Seminar, UCLA (<em>August 15, 2025</em>)</li>
         </ul>
       </li>
       <li>“<strong>Benchmarking FRG-DFT with the One-Dimensional Fermi Gas – Towards a Nonperturbative Many-Body Nuclear Theory</strong>”
         <ul>
-          <li>UTRIP Final Presentation, The University of Tokyo, Tokyo, Japan (August 5, 2025)</li>
-          <li><a href="https://meetings.aps.org/Meeting/FWS25/Session/L04.5">APS Far West Section</a>, UC Santa Cruz <span style="color: rgb(255, 85, 85);">(Steven Chu Award, 1st)</span> (October 11, 2025)</li>
+          <li>UTRIP Final Presentation, The University of Tokyo, Tokyo, Japan (<em>August 5, 2025</em>)</li>
+          <li><a href="https://meetings.aps.org/Meeting/FWS25/Session/L04.5">APS Far West Section</a>, UC Santa Cruz <span style="color: rgb(255, 85, 85);">(Steven Chu Award, 1st)</span> (<em>October 11, 2025</em>)</li>
         </ul>
       </li>
       <li>“<strong>Data-driven statistical model of nonthermal particle acceleration by the kink instability in relativistic jets</strong>”
         <ul>
-          <li><a href="https://meetings.aps.org/Meeting/DPP24/Session/NO05.14">APS Division of Plasma Physics</a>, Atlanta, Georgia (October 9, 2024)</li>
+          <li><a href="https://meetings.aps.org/Meeting/DPP24/Session/NO05.14">APS Division of Plasma Physics</a>, Atlanta, Georgia (<em>October 9, 2024</em>)</li>
         </ul>
       </li>
       <li>“<strong>From Finite Groups to Lie Algebras: Symmetries and Representations in Physics</strong>”
         <ul>
-          <li>Perimeter Institute PSI START Program, Bishop’s University, Sherbrooke, Quebec, Canada (May 29, 2025)</li>
+          <li>Perimeter Institute PSI START Program, Bishop’s University, Sherbrooke, Quebec, Canada (<em>May 29, 2025</em>)</li>
         </ul>
       </li>
     </ul>
@@ -343,13 +343,13 @@
   <section id="meetings">
     <h2>Meetings Attended</h2>
     <ul>
-      <li><strong>APS Global Physics Summit 2026</strong> — Denver, Colorado (planned March 2025)</li>
-      <li><strong>GWSky Kick-off Meeting</strong> — Max Planck Institute for Gravitational Physics (Albert Einstein Institute–AEI), Potsdam, Germany (planned December 2025)</li>
-      <li><strong>California Amplitudes Meeting 2025 (LA)</strong> — Mani L. Bhaumik Institute for Theoretical Physics, UCLA (November 2025)</li>
-      <li><strong>2025 Annual Meeting of the APS Far West Section</strong> — UC Santa Cruz <span style="color: rgb(255, 85, 85);">(Steven Chu Award, 1st)</span> (October 2025)</li>
-      <li><strong>2025 Southern California Strings</strong> — Mani L. Bhaumik Institute for Theoretical Physics, UCLA (October 2025)</li>
-      <li><strong>California Amplitudes Meeting 2025 (Davis)</strong> — Center for Quantum Mathematics and Physics (QMAP), UC Davis (May 2025)</li>
-      <li><strong>66th Annual Meeting of the APS Division of Plasma Physics</strong> — Atlanta, Georgia (October 2024)</li>
+      <li><strong>APS Global Physics Summit 2026</strong> — Denver, Colorado (<em>planned March 2025</em>)</li>
+      <li><strong>GWSky Kick-off Meeting</strong> — Max Planck Institute for Gravitational Physics (Albert Einstein Institute–AEI), Potsdam, Germany (<em>planned December 2025</em>)</li>
+      <li><strong>California Amplitudes Meeting 2025 (LA)</strong> — Mani L. Bhaumik Institute for Theoretical Physics, UCLA (<em>November 2025</em>)</li>
+      <li><strong>2025 Annual Meeting of the APS Far West Section</strong> — UC Santa Cruz <span style="color: rgb(255, 85, 85);">(Steven Chu Award, 1st)</span> (<em>October 2025</em>)</li>
+      <li><strong>2025 Southern California Strings</strong> — Mani L. Bhaumik Institute for Theoretical Physics, UCLA (<em>October 2025</em>)</li>
+      <li><strong>California Amplitudes Meeting 2025 (Davis)</strong> — Center for Quantum Mathematics and Physics (QMAP), UC Davis (<em>May 2025</em>)</li>
+      <li><strong>66th Annual Meeting of the APS Division of Plasma Physics</strong> — Atlanta, Georgia (<em>October 2024</em>)</li>
     </ul>
   </section>
 
@@ -357,9 +357,9 @@
     <h2>Service &amp; Outreach</h2>
     <h3>Interviews &amp; Press</h3>
     <ul>
-      <li><strong>APS Steven Chu Award for Best Undergraduate Research</strong> (upcoming)</li>
-      <li><strong>FUTI Global Leadership Award</strong> (upcoming)</li>
-      <li><strong><a href="https://www.ubishops.ca/samuel-degen-perimeter-at-b-u/">Perimeter Institute’s PSI START Satellite Interview</a></strong> (May 2025)</li>
+      <li><strong>APS Steven Chu Award for Best Undergraduate Research</strong> (<em>upcoming</em>)</li>
+      <li><strong>FUTI Global Leadership Award</strong> (<em>upcoming</em>)</li>
+      <li><strong><a href="https://www.ubishops.ca/samuel-degen-perimeter-at-b-u/">Perimeter Institute’s PSI START Satellite Interview</a></strong> (<em>May 2025</em>)</li>
     </ul>
     <h3>Activities</h3>
     <ul>
