spaced out awards list

--- a/index.html
+++ b/index.html
@@ -168,6 +168,8 @@
     section { max-width: 900px; margin: var(--stack-gap) auto 0 auto; padding: 1.5rem; background: var(--section-bg); border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.3); text-align: left; }
     h2 { border-bottom: 3px solid transparent; border-image: var(--accent-gradient) 1; padding-bottom: 0.5rem; margin-top: 0; }
     ul { padding-left: 1.2rem; } ul li strong { font-weight: 700; }
+    #honors > ul > li { margin-bottom: 0.75rem; }
+    #honors > ul > li:last-child { margin-bottom: 0; }
     details { margin-bottom: 1rem; } summary { cursor: pointer; font-weight: 700; color: var(--text-color); }
 
     /* FOOTER */
@@ -275,13 +277,14 @@
     <h2>Honors &amp; Awards</h2>
     <h3>2025</h3>
     <ul>
-      <li><strong>APS Steven Chu Award for Best Undergraduate Research (1st)</strong> — first place prize among all undergraduate research presented at the 2025 meeting of the APS Far West Section (includes CA, NV, HI) (<em>October 2025</em>)</li> 
+      <li><strong>APS Steven Chu Award for Best Undergraduate Research (1st)</strong> — first place prize among all undergraduate research presented at the American Physical Society's 2025 meeting of the Far West Section (includes CA, NV, HI) (<em>October 2025</em>)</li> 
       <li><strong>UCLA Undergraduate Research Scholars Program (URSP)</strong> — year-long research scholarship (<em>2025 - 2026</em>)</li> <!-- supporting proposed work on gravitational wave scattering with Mikhail Solon (2025 - 2026)</li> -->
       <li><strong>Mani L. Bhaumik Institute for Theoretical Physics Summer Research Fellowship</strong> — First undergraduate offered a summer research fellowship at UCLA’s Bhaumik Institute for Theoretical Physics (<em>August 2025</em>)</li>
-      <li><strong>University of Tokyo Research Internship Program (UTRIP)</strong> — 1 of 14 selected from 1,149 applicants for in-person, fully funded research and culture program (<em>June 2025</em>)</li>
-      <ul>
-        <li><strong>FUTI Global Leadership Award</strong> — 1 of 2 UTRIP students</li>
-      </ul>
+      <li><strong>University of Tokyo Research Internship Program (UTRIP)</strong> — 1 of 14 selected from 1,149 applicants for in-person, fully funded research and culture program (<em>June 2025</em>)
+        <ul>
+          <li><strong>FUTI Global Leadership Award</strong> — 1 of 2 UTRIP students</li>
+        </ul>
+      </li>
       <li><strong>Perimeter Institute’s PSI START Satellite Program</strong> — 1 of 3 international students selected for in-person, fully funded 2-week program in Quebec (<em>May 2025</em>)</li>
     </ul>
     <h3>2024</h3>
@@ -343,7 +346,7 @@
   <section id="meetings">
     <h2>Meetings Attended</h2>
     <ul>
-      <li><strong>APS Global Physics Summit 2026</strong> — Denver, Colorado (<em>planned March 2025</em>)</li>
+      <li><strong>APS Global Physics Summit 2026</strong> — Denver, Colorado (<em>planned March 2026</em>)</li>
       <li><strong>GWSky Kick-off Meeting</strong> — Max Planck Institute for Gravitational Physics (Albert Einstein Institute–AEI), Potsdam, Germany (<em>planned December 2025</em>)</li>
       <li><strong>California Amplitudes Meeting 2025 (LA)</strong> — Mani L. Bhaumik Institute for Theoretical Physics, UCLA (<em>November 2025</em>)</li>
       <li><strong>2025 Annual Meeting of the APS Far West Section</strong> — UC Santa Cruz <span style="color: rgb(255, 85, 85);">(Steven Chu Award, 1st)</span> (<em>October 2025</em>)</li>
