updated PSI START descripition

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
           <li><strong>FUTI Global Leadership Award</strong> — 1 of 2 UTRIP students</li>
         </ul>
       </li>
-      <li><strong>Perimeter Institute’s PSI START Satellite Program</strong> — 1 of 3 international students selected for in-person, fully funded 2-week program in Quebec (<em>May 2025</em>)</li>
+      <li><strong>Perimeter Institute’s PSI START Satellite Program</strong> — 1 of 3 international students selected for in-person, fully funded 2-week program in theoretical physics coursework (<em>May 2025</em>)</li>
     </ul>
     <h3>2024</h3>
     <ul>
